@@ -69,6 +69,8 @@ PHP                                                                        NEWS
   (Derick, Mike Sullivan)
 - Fixed bug #45799 (imagepng() crashes on empty image). (Martin McNickle,
   Takeshi Abe)
+- Fixed bug #45191 (error_log ignores date.timezone php.ini val when
+  setting logging timestamps). (Derick)
 - Fixed bug #43073 (TrueType bounding box is wrong for angle<>0).
   (Martin McNickle)
 - Fixed bug #38805 (PDO truncates text from SQL Server text data type
